--- a/config/boards/shields/kez/kez.conf
+++ b/config/boards/shields/kez/kez.conf
@@ -3,3 +3,7 @@ CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
 
 CONFIG_ZMK_SLEEP=y
 CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=3600000
+
+CONFIG_ZMK_RGB_UNDERGLOW=y
+CONFIG_ZMK_RGB_UNDERGLOW_ON_START=y
+CONFIG_WS2812_STRIP=y
