--- a/config/boards/shields/kez/kez.conf
+++ b/config/boards/shields/kez/kez.conf
@@ -6,6 +6,7 @@ CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=3600000
 
 CONFIG_ZMK_RGB_UNDERGLOW=y
 CONFIG_ZMK_RGB_UNDERGLOW_ON_START=y
+CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_IDLE=y
 CONFIG_WS2812_STRIP=y
 CONFIG_ZMK_RGB_UNDERGLOW_EFF_START=1
 CONFIG_ZMK_RGB_UNDERGLOW_HUE_START=100
