--- a/config/boards/shields/kez/kez.conf
+++ b/config/boards/shields/kez/kez.conf
@@ -10,3 +10,6 @@ CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_IDLE=y
 CONFIG_WS2812_STRIP=y
 CONFIG_ZMK_RGB_UNDERGLOW_EFF_START=1
 CONFIG_ZMK_RGB_UNDERGLOW_HUE_START=100
+
+# fix bluetooth battery for windows
+CONFIG_BT_GATT_ENFORCE_SUBSCRIPTION=n
