Revert previous change

--- a/config/boards/shields/kez/kez.conf
+++ b/config/boards/shields/kez/kez.conf
@@ -12,4 +12,4 @@ CONFIG_ZMK_RGB_UNDERGLOW_EFF_START=1
 CONFIG_ZMK_RGB_UNDERGLOW_HUE_START=100
 
 # fix bluetooth battery for windows
-# CONFIG_BT_GATT_ENFORCE_SUBSCRIPTION=n
+CONFIG_BT_GATT_ENFORCE_SUBSCRIPTION=n
